# ativos-pedreiraum-backend

./: .dockerignore  .gitignore  .sample.env  API.md  Dockerfile  FRONTEND_GUIDE.md  README.md  TECHNICALSPEC.md  backup.py  backup.sh  main.py  pyproject.toml  restore.py
api/middlewares/: auth_mw.py
api/v1/: admin_assets.py  assets.py  auth.py  categories.py  images.py  users.py
application/services/: asset_approval_service.py  asset_service.py  branch_service.py  category_service.py  image_service.py  user_service.py
core/: config.py  database.py
core/helpers/: authentication_helper.py  exceptions_helper.py  logger_helper.py
docs/: API.md  BACKUP.md  DOMAIN.MD
domain/: entities.py  enums.py  interfaces.py
infrastructure/database/: schema.sql  schema_images.sql  schema_users_branches.sql
infrastructure/repositories/: asset_repository.py  branch_repository.py  category_repository.py  config_repository.py  image_repository.py  user_repository.py
